@@ -12,6 +12,7 @@ import dev.langchain4j.model.embedding.EmbeddingModel;
 import dev.langchain4j.store.embedding.qdrant.QdrantEmbeddingStore;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
@@ -22,7 +23,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -35,6 +35,8 @@ public class QdrantVectorService {
     private static final String KEY_AMOUNT = "amount";
     private static final String KEY_ID = "id";
     private static final String QDRANT_RESULT = "result";
+    private static final String MATCH = "match";
+    private static final String VALUE = "value";
 
     private final QdrantEmbeddingStore embeddingStore;
     private final EmbeddingModel embeddingModel;
@@ -106,25 +108,12 @@ public class QdrantVectorService {
             body.put("filter", filter);
         }
 
-        String url = String.format("http://%s:%d/collections/%s/points/search", host, httpPort, collectionName);
-        HttpHeaders headers = new HttpHeaders();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        HttpEntity<Map<String, Object>> entity = new HttpEntity<>(body, headers);
-
-        try {
-            ResponseEntity<Map> response = restTemplate.postForEntity(url, entity, Map.class);
-            if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
-                List<Map<String, Object>> results = (List<Map<String, Object>>) response.getBody().get(QDRANT_RESULT);
-                if (results != null) {
-                    return results.stream()
-                            .map(this::mapRestResultToEmbeddedExpense)
-                            .collect(Collectors.toList());
-                }
-            }
-        } catch (Exception e) {
-            log.error("Qdrant search failed: {}", e.getMessage());
+        List<Map<String, Object>> results = executeQdrantSearch(body);
+        if (results != null) {
+            return results.stream()
+                    .map(this::mapRestResultToEmbeddedExpense)
+                    .toList();
         }
-
         return List.of();
     }
 
@@ -132,10 +121,10 @@ public class QdrantVectorService {
         List<Map<String, Object>> conditions = new ArrayList<>();
 
         if (category != null && !category.isEmpty()) {
-            conditions.add(Map.of("key", KEY_CATEGORY, "match", Map.of("value", category)));
+            conditions.add(Map.of("key", KEY_CATEGORY, MATCH, Map.of(VALUE, category)));
         }
         if (person != null && !person.isEmpty()) {
-            conditions.add(Map.of("key", KEY_PERSON, "match", Map.of("value", person)));
+            conditions.add(Map.of("key", KEY_PERSON, MATCH, Map.of(VALUE, person)));
         }
         if (from != null) {
             conditions.add(Map.of("key", KEY_DATE, "range", Map.of("gte", from.toString())));
@@ -160,8 +149,8 @@ public class QdrantVectorService {
         Long id = null;
         if (payload != null && payload.get(KEY_ID) != null) {
             Object idObj = payload.get(KEY_ID);
-            if (idObj instanceof Number) {
-                id = ((Number) idObj).longValue();
+            if (idObj instanceof Number number) {
+                id = number.longValue();
             } else {
                 id = Long.parseLong(idObj.toString());
             }
@@ -170,8 +159,8 @@ public class QdrantVectorService {
         BigDecimal amount = null;
         if (payload != null && payload.get(KEY_AMOUNT) != null) {
             Object amtObj = payload.get(KEY_AMOUNT);
-            if (amtObj instanceof Number) {
-                amount = BigDecimal.valueOf(((Number) amtObj).doubleValue());
+            if (amtObj instanceof Number number) {
+                amount = BigDecimal.valueOf(number.doubleValue());
             } else {
                 amount = new BigDecimal(amtObj.toString());
             }
@@ -198,28 +187,32 @@ public class QdrantVectorService {
         }
     }
 
+    private List<Map<String, Object>> executeQdrantSearch(Map<String, Object> body) {
+        String url = String.format("http://%s:%d/collections/%s/points/search", host, httpPort, collectionName);
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        HttpEntity<Map<String, Object>> entity = new HttpEntity<>(body, headers);
+        try {
+            ResponseEntity<Map<String, Object>> response = restTemplate.exchange(
+                    url, HttpMethod.POST, entity, new ParameterizedTypeReference<>() {});
+            if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
+                return (List<Map<String, Object>>) response.getBody().get(QDRANT_RESULT);
+            }
+        } catch (Exception e) {
+            log.error("Qdrant search failed: {}", e.getMessage());
+        }
+        return List.of();
+    }
+
     public boolean existsInVectorStore(Long id) {
         Map<String, Object> body = new HashMap<>();
         body.put("vector", new float[2048]);
         body.put("limit", 1);
         body.put("with_vector", false);
         body.put("with_payload", true);
-        body.put("filter", Map.of("must", List.of(Map.of("key", KEY_ID, "match", Map.of("value", id.toString())))));
+        body.put("filter", Map.of("must", List.of(Map.of("key", KEY_ID, MATCH, Map.of(VALUE, id.toString())))));
 
-        String url = String.format("http://%s:%d/collections/%s/points/search", host, httpPort, collectionName);
-        HttpHeaders headers = new HttpHeaders();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        HttpEntity<Map<String, Object>> entity = new HttpEntity<>(body, headers);
-
-        try {
-            ResponseEntity<Map> response = restTemplate.postForEntity(url, entity, Map.class);
-            if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
-                List<Map<String, Object>> results = (List<Map<String, Object>>) response.getBody().get(QDRANT_RESULT);
-                return results != null && !results.isEmpty();
-            }
-        } catch (Exception e) {
-            log.error("Qdrant exists check failed: {}", e.getMessage());
-        }
-        return false;
+        List<Map<String, Object>> results = executeQdrantSearch(body);
+        return results != null && !results.isEmpty();
     }
 }
